--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
     "core-js": "^2.4.1",
+    "raleway-webfont": "^3.0.1",
     "rxjs": "^5.5.6",
+    "typeit": "^5.6.0",
+    "w3-css": "^4.0.4",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
